# PharmacyMS

./: CMakeLists.txt  README.md  login_frame.glade  main.c
db/: PharmacyDB.sql  insert.sql
doc/: creadits and references.md  github_guides.md  todo.md
scripts/: clientScript.sh  serverScript.sh
src/: MySqlManager.c  MySqlManager.h  add.c  add.h  company.h  main.c
src/client/: client.c  client.h  clientStarter.c
src/dbManagement/: MySqlManager.c  database.c  database.h  dbManagement.c  dbManagement.h
src/define/: define.h
src/gui/: guiStarter.c  login_frame.glade
src/parser/: cJSON.c  object.c  object.h  request_parser.c  request_parser.h
src/server/: server.c  server.h  serverStarter.c
src/server_client/: client.c  client.h  request_parser.c  request_parser.h  server.c  server.h  serverStarter.c  server_hander.c  serviceHandler.c
src/struct/: company.c  customer.c  customer.h  user.c  user.h
src/testing/: serviceHandler.c  testing.c
